# drf

./: .env.sample  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: settings.py  tasks.py  urls.py
courses/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_payment.py  0004_alter_lesson_course_alter_payment_user.py  0005_course_owner_lesson_owner.py  0006_alter_course_owner_alter_lesson_owner.py  0007_alter_course_owner_alter_lesson_owner.py  0008_subscription.py  0009_alter_subscription_options_alter_subscription_user.py  0010_alter_payment_user.py  0011_payment_payment_id.py  0012_course_updated_at.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py
