[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Helen85236"]
readme = "README.md"
packages = [{include = "drf"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"